<resources>
    <string name="app_name">TUGAS UTS</string>
    <string name="onboarding_description">Onboarding Image Splash Screeen</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_home_page">HomePageActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="aplikasi_ku">Aplikasi Pengenalan</string>
    <string name="Zhafir_Mahdi">Zhafir mahdi</string>
    <string name="Zhafir_mahdi">Zhafir Mahdi</string>
    <string name="about_me">About Me</string>
</resources>
