<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.SplashScreenActivity">

    <ImageView
        android:id="@+id/splash_image"
        android:layout_width="350dp"
        android:layout_height="350dp"
        android:layout_marginTop="150dp"
        android:contentDescription="@string/onboarding_description"
        app:layout_constrainedHeight="false"
        app:layout_constrainedWidth="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/cap"/>
    
    <TextView
        style="@style/TxtDefaultHeading"
        android:id="@+id/splash_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aplikasi_ku"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@id/splash_contributor"
        />

    <TextView
        style="@style/TxtDefaultSubHeading"
        android:id="@+id/splash_contributor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Zhafir_Mahdi"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textAlignment="center"
        android:layout_marginBottom="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textColor="@color/colorText"
        />
</android.support.constraint.ConstraintLayout>